force-app/main/default/objects/ExpOMTestExtension__c/ExpOMTestExtension__c.object-meta.xml
<CustomObject>
    <description>ExP OM: Do not delete or modify -- used by outcome manager unit tests</description>
    <label>ExpOMTestExtension</label>
    <nameField>
        <displayFormat>OMTestExt-{0000}</displayFormat>
        <label>ExpOMTestExtension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExpOMTestExtensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>