force-app/main/default/objects/ExpOMTestExtension__c/fields/Athletic_Skills__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Skills__c</fullName>
    <label>Athletic Skills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>