force-app/main/default/objects/ExpOMTestExtension__c/fields/Language_Skills__c.field-meta.xml
<CustomField>
    <fullName>Language_Skills__c</fullName>
    <label>Language Skills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>