force-app/main/default/objects/ExpOMTestExtension__c/fields/Math_Skills__c.field-meta.xml
<CustomField>
    <fullName>Math_Skills__c</fullName>
    <label>Math Skills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>