force-app/main/default/objects/ExpOMTestExtension__c/fields/Paired_Row__c.field-meta.xml
<CustomField>
    <fullName>Paired_Row__c</fullName>
    <label>Paired Row</label>
    <referenceTo>ExpOMTest__c</referenceTo>
    <relationshipLabel>ExpOMTestExtensions</relationshipLabel>
    <relationshipName>ExpOMTest</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>