force-app/main/default/objects/ExpOMTestExtension__c/fields/Social_Skills__c.field-meta.xml
<CustomField>
    <fullName>Social_Skills__c</fullName>
    <label>Social Skills</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>